add more documentationb

--- a/doc/GettingStarted.dox
+++ b/doc/GettingStarted.dox
@@ -2,7 +2,7 @@
 
 This is a very short guide on how to get started with WHYCPP.
 
-@section GettingStartedInstallation How to "install" Eigen?
+@section GettingStartedInstallation How to "install" WHYCPP?
 
 TBDL
 
